# rust-game

./: .gitignore  Cargo.toml
client/: Cargo.toml  build.rs
client/res/shaders/: basic.vert
client/src/: main.rs
client/src/renderer/: mod.rs  renderer.rs  vertex_renderer.rs
client/src/renderer/vulkan/: context.rs  device.rs  mod.rs  pipeline.rs  surface.rs
common/src/: lib.rs
server/: Cargo.toml
tools/: Cargo.toml
