[package]
name = "survival-game"
version = "0.1.0"
description = "A multiplayer survival sandbox gamex"
edition = "2021"
authors = [ "Alex Garrity" ]
license = "GPL-3"
readme = "README.md"
publish = false

[workspace]
members = [ "client", "server", "common", "tools" ]

[dev-dependencies]
fs_extra = "1.3.0"