[package]
name = "client"
description = "Client for multiplayer survival sandbox game"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
common = { path = "../common", version = "*" }
winit = "0.29.1-beta"
ash = "0.37.3+1.3.251"
legion = "0.4"
ash-window = "0.12.0"
num = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
byteorder = "1.5.0"

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3.1"
shaderc = "0.8.2"